# zkWASM

./: .gitignore  Cargo.toml  README.md
memory/: Cargo.toml
memory/src/: lib.rs
src/: lib.rs  main.rs
src/context/: context.rs  mod.rs
src/memory/: memory.rs  mod.rs
src/opcode/: mod.rs  wasm_opcode.rs
src/proof_context/: mod.rs  proof_context.rs
src/proof_context/trace/: mod.rs  ram_access_record.rs  state_trace_manager.rs  state_trace_tuple.rs  storage_read_record.rs  storage_write_record.rs
src/proof_context/trace/plain_trace_verification/: check_constants.rs  mod.rs  opcode_i64_add.rs  opcode_local_get.rs  plain_single_trace_verification.rs
src/proof_context/trace/proof_type/: mod.rs  proof_access_type.rs  proof_opcode.rs  proof_section_type.rs  proof_storage_type.rs
src/proof_context/trace/trace_collector/: mod.rs  opcode_end.rs  opcode_i64_add.rs  opcode_local_get.rs
src/proof_context/trace/type/: mod.rs  opcode_type.rs  storage_type.rs
src/trace/: memory_location.rs  mod.rs  plain_trace_tuple.rs  section_type.rs  state_trace_manager.rs  state_trace_tuple.rs  storage_access_record.rs  storage_read_record.rs  storage_type.rs  storage_write_record.rs
src/trace_collector/: mod.rs  opcode_0x0b.rs  opcode_0x20.rs  opcode_0x7c.rs
src/util/: constant_setting.rs  mod.rs  util.rs
src/wasm_context/: context_execution.rs  mod.rs  opcode_end.rs  opcode_i64_add.rs  opcode_i64_local_get.rs  wasm_context.rs
src/wasm_context/opcode_execution/: mod.rs  opcode_end.rs  opcode_i64_add.rs  opcode_i64_local_get.rs
src/witness_generation/: opcode_0x20.rs
