[package]
name = "zkwasm"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zkwasm"
path = "src/main.rs"

[features]

[dependencies]
halo2_proofs = {git = "https://github.com/privacy-scaling-explorations/halo2.git", rev = "v2023_02_02"}